[package]
name = "valico"
version = "3.5.1-alpha.0"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
description = "JSON Schema validator and JSON coercer"
keywords = ["json", "validator", "json-schema"]
license = "MIT"
documentation = "http://rustless.org/valico/doc/valico/"
homepage = "https://github.com/rustless/valico"
build = "build.rs"
edition = "2018"

[dependencies]
regex = "1"
url = "2"
jsonway = "2.0"
uuid = {version = "0.8", features = ["v4"]}
phf = "0.8"
serde = "1"
serde_json = "1"
chrono = "0.4.6"
publicsuffix = { version = "1.5.4", default-features = false }
percent-encoding = "2.1"
json-pointer = "0.3"
uritemplate-next = "0.2"
base64 = "0.13"

[build-dependencies.phf_codegen]
version = "0.8"

[[test]]
name = "tests"
