[package]
name = "valico"
version = "3.6.1-alpha.0"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
description = "JSON Schema validator and JSON coercer"
keywords = ["json", "validator", "json-schema"]
license = "MIT"
documentation = "http://rustless.org/valico/doc/valico/"
homepage = "https://github.com/rustless/valico"
build = "build.rs"
edition = "2018"

[dependencies]
regex = "1"
url = "2"
jsonway = "2.0"
uuid = {version = "1.1.2", features = ["v4"]}
phf = "0.11"
serde = "1"
serde_json = "1"
chrono = "0.4.6"
addr = "0.15"
percent-encoding = "2.1"
json-pointer = "0.3"
uritemplate-next = "0.2"
base64 = "0.13"

[build-dependencies.phf_codegen]
version = "0.11"

[[test]]
name = "tests"
